# Stock_API

./: Dockerfile  HELP.md  LICENSE  README.md  app.py  db.py  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  tests.py
config/: createDb.sql  dbconfig.json
cypress/e2e/: visit.cy.js
